<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fetch_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="clinton.bill.williams@gmail.com">clintubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- Nav 2 dependencies for fetch custom bot -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path = "/home/clintubuntu/Documents/Test/ros_ws/install/fetch_description/share/"/> -->
    <gazebo_ros gazebo_model_path = "/home/clintubuntu/Documents/Capstone/wpi-capstone/ros_ws/install/fetch_description/share/"/>
    <!-- TODO: come back to this <gazebo_ros gazebo_model_path="$(env FETCH_DESCRIPTION_PATH)"/>-->
  </export>
</package>
