<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interpreter_package</name>
  <version>0.0.1</version>
  <description>Does chat to determine target>
  <maintainer email="rldemont@wpi.edu">vagrant</maintainer>
  <license>MIT</license>

  <depend>os</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>langchain</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
